# adoc-pre-task

./: .coverage  .gitignore  Dockerfile  READMD.md  README.md  callback.html  create_multi_db.sql  docker-compose.yml  entrypoint.sh  login.html  main.py  pyproject.toml
app/: main.py  models.py  settings.py  test.py  type_clss.py
app/core/: db.py  security.py  settings.py  utils.py
app/enums/: board_enums.py  common_enums.py  security_enums.py  user_enums.py
app/exceptions/: board_exception.py  user_exception.py
app/models/: __init__.py  board_model.py  model.py  user_model.py
app/repositories/: board_repository.py  user_repository.py
app/routers/: board_router.py  user_router.py
app/schemas/: board_schemas.py  user_schemas.py
app/services/: board_service.py  user_service.py
app/tests/: conftest.py
app/tests/routers/boards/: test_boards_create.py  test_boards_delete.py  test_boards_get.py  test_boards_list.py  test_boards_put.py
app/tests/routers/users/: test_users_login.py  test_users_logout.py  test_users_refresh.py  test_users_signup.py
common/: get_logger.py  models.py  mpfhandler.py
config/: logging.conf
docker/: Dockerfile  Dockerfile.back  requirements.txt  requirements.txt.back
migration/: env.py  init_db.py
migration/versions/: 02e756938035_add_user_address.py  09622e805dfe_initial_migration.py  4014b6aa6a0a_email_unique_add.py  8b8cfed74507_add_refresh_token_model.py  91863a8d3f77_refresh_token_nullable_true.py  a336e3b3603f_delete_exp_at_colume.py  ac3e67b04198_first.py  b7e0f17e3c0b_init.py
type_class/: modelname.py
