[tool.poetry]
name = "poetry -version"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
sqlalchemy = "^2.0.36"
uvicorn = "^0.34.0"
pydantic-settings = "^2.7.0"
requests = "^2.32.3"
passlib = "^1.7.4"
pymongo = "^4.10.1"
pymysql = "^1.1.1"
pyjwt = "^2.10.1"
cryptography = "^44.0.0"


[tool.poetry.group.alembic.dependencies]
alembic = "^1.14.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
