[tool.poetry]
name = "poetry -version"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
sqlalchemy = "^2.0.36"
uvicorn = "^0.34.0"
pydantic-settings = "^2.7.0"
requests = "^2.32.3"
passlib = "^1.7.4"
pymysql = "^1.1.1"
pyjwt = "^2.10.1"
cryptography = "^44.0.0"
mongoengine = "^0.29.1"
httpx = "^0.28.1"
bcrypt = "^4.2.1"
freezegun = "^1.5.1"


[tool.poetry.group.alembic.dependencies]
alembic = "^1.14.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.3"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
fastapi = "^0.115.7"
factory-boy = "^3.3.1"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# pyproject.toml
[tool.ruff]
line-length = 88              # 한 줄 최대 길이
select = ["I", "E", "F", "W"]      # 활성화할 규칙
ignore = ["E203", "E501"]     # 무시할 규칙
fix = true                    # 자동 수정 활성화
exclude = ["migration/*"]    # 제외할 디렉토리